refactor: учтены комментарии ревьюера от 21.12.2022